Fix gradleScriptsPath variable

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,5 @@
+gradleScriptsPath=https://raw.githubusercontent.com/sapience-foundation/gradle-scripts/master
+
 theEmail=gracilianomp@gmail.com
 defaultArtifactGroup=org.gracilianomp
 
